--- a/style.scss
+++ b/style.scss
@@ -167,11 +167,20 @@ ul, li {
     @media (max-width: 1490px){
       padding: 0 15px 0 15px;
     }
+
+    @media (max-width: 700px) {
+      display: block;
+      justify-content: center;
+    }
   }
 
   .find-gift_block{
     width: 50%;
     background: #F1F1F2;
+
+    @media (max-width: 700px) {
+      width: 100%;
+    }
 
     .find-gift{
       padding: 156px 126px 135px 162px;
@@ -237,6 +246,11 @@ ul, li {
 
   .find-gift_photo{
     width: 50%;
+
+    @media (max-width: 700px) {
+      width: 100%;
+    }
+
     .find-gift-photo_img{
       height: 100%;
       width: 100%;
@@ -253,8 +267,17 @@ ul, li {
       padding: 0 15px 0 15px;
     }
 
+    @media (max-width: 700px) {
+      flex-direction: column-reverse;
+    }
+
     .learn-more_photo{
       width: 50%;
+
+      @media (max-width: 700px) {
+        width: 100%;
+      }
+
       .learn-more-photo_img{
         height: 100%;
         width: 100%;
@@ -264,6 +287,10 @@ ul, li {
     .learn-more_block{
       width: 50%;
       background: #F1F1F2;
+
+      @media (max-width: 700px) {
+        width: 100%;
+      }
 
       .learn-more{
         padding: 164px 166px 104px 102px;
@@ -504,8 +531,6 @@ ul, li {
     padding-bottom: 80px;
 
     .best-blog_title{
-      width: 700px;
-      margin: 0 auto;
       text-align: center;
 
       .best-blog-ever_title{
@@ -523,21 +548,40 @@ ul, li {
     }
 
     .wish_container{
-      width: 1200px;
+      max-width: 1200px;
       margin: 0 auto;
-      padding-top: 75px;
+      padding: 75px 15px 0 15px;
       display: flex;
+
+      @media (max-width: 700px) {
+        flex-direction: column;
+      }
 
       .wish_photo{
         img{
           height: 100%;
+
+          @media (max-width: 700px) {
+            width: 100%;
+          }
         }
       }
 
-
       .wish_block{
         background: #231F20;
-        padding: 63px 200px 49px 78px;
+        max-width: 770px;
+        width: 100%;
+        padding-left: 78px;
+        padding-top: 63px;
+        padding-right: 20px;
+
+        @media (max-width: 970px) {
+          padding-left: 38px;
+        }
+
+        @media (max-width: 700px) {
+          width: auto;
+        }
 
         .name{
           font-size: 14px;
@@ -554,16 +598,27 @@ ul, li {
             font-size: 48px;
             color: #FFFFFF;
             padding-top: 30px;
+            max-width: 492px;
+
+            @media (max-width: 970px) {
+              font-size: 32px;
+            }
           }
         }
         .wish-read-more{
           padding-top: 70px;
+
+          @media (max-width: 700px) {
+            padding-bottom: 30px;
+          }
 
           .read-more_link{
             font-size: 18px;
             font-family: Gilroy, sans-serif;
             font-weight: normal;
             color: #FFFFFF;
+
+
           }
           .read-more_link:hover{
             text-decoration: underline;
@@ -581,6 +636,10 @@ ul, li {
 
       @media (max-width: 1139px) {
         justify-content: center;
+      }
+
+      @media (max-width: 700px) {
+        display: none;
       }
 
       .database-wishes{
@@ -677,15 +736,17 @@ ul, li {
   background: #FAFAFA;
 
   .footer_container{
-    width: 1000px;
+    max-width: 1000px;
     margin: 0 auto;
 
     .footer_links{
-      width: 700px;
+      max-width: 700px;
       margin: 0 auto;
       display: flex;
       justify-content: space-between;
       padding-top: 105px;
+      padding-left: 15px;
+      padding-right: 15px;
 
       .footer-home_link{
         font-size: 14px;
@@ -702,6 +763,11 @@ ul, li {
         font-family: Gilroy, sans-serif;
         color: black;
         font-weight: bold;
+
+        @media (max-width: 576px){
+          margin-left: 30px;
+        }
+
       }
       .footer-about_link:hover{
         text-decoration: underline;
@@ -717,7 +783,12 @@ ul, li {
         font-family: Gilroy, sans-serif;
         color: black;
         font-weight: bold;
+
+        @media (max-width: 576px){
+          margin-right: 30px;
+        }
       }
+
       .footer-service_link:hover{
         text-decoration: underline;
       }
